# spotify-downloader

./: README.md  index.html  package.json
src/: App.css  App.tsx  Login.css  Login.tsx  Router.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  downloader.rs  main.rs  ws.rs
src-tauri/src/db/: creds.rs  file_path_location.rs  mod.rs
src/ui_components/: FilePicker.css  FilePicker.tsx  download_center.css  download_center.tsx
