[package]
name = "spotify-dl-tauri"
version = "0.1.0"
description = "A Spotify Downloader"
authors = ["mari-rs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spotify_dl_lib = { path = "../../spotify-dl-lib-1", features = ["mp3"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.16"
tungstenite = "0.17"
url = "2.5.0"
futures-util = "0.3.30"
anyhow = "1.0.86"
rusqlite = { version = "0.31.0", features = ["bundled"] }
bcrypt = "0.15.1"
dirs = "5.0.1"
keyring = "2.3.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
